@@ -648,63 +648,6 @@ PlotLine * QSMath::getOBV ()
   return obv;
 }
 
-PlotLine * QSMath::getVFI (int period)
-{
-  PlotLine *vfi = new PlotLine();
-  if (! data)
-    return vfi;
-
-  int loop;
-  for (loop = period; loop < (int) data->count(); loop++)
-  {
-    double inter = 0.0;
-    double sma_vol = 0.0;
-    int i;
-    double close = data->getClose(loop-period);
-    double high = data->getHigh(loop-period);
-    double low = data->getLow(loop-period);
-    double typical = (high+low+close)/3.0;
-    for(i=loop-period+1; i<=loop; i++) {
-      double ytypical = typical;
-      close = data->getClose(i);
-      high = data->getHigh(i);
-      low = data->getLow(i);
-      typical = (high+low+close)/3.0;
-      double delta = (log(typical) - log(ytypical));
-      inter += delta*delta;
-      sma_vol += data->getVolume(i);
-      }
-    inter = 0.2*sqrt(inter/(double)period)*typical;
-    sma_vol /= (double)period;
-
-    close = data->getClose(loop-period);
-    high = data->getHigh(loop-period);
-    low = data->getLow(loop-period);
-    typical = (high+low+close)/3.0;
-    double t = 0;
-    for(i=loop-period+1; i<=loop; i++) {
-      double ytypical = typical;
-      double volume = data->getVolume(i);
-      close = data->getClose(i);
-      high = data->getHigh(i);
-      low = data->getLow(i);
-      typical = (high+low+close)/3.0;
-
-      if (typical > ytypical+inter)
-        t = t + log(1.0 + volume/sma_vol);
-      else
-      {
-        if (typical < ytypical-inter)
-          t = t - log(1.0 + volume/sma_vol);
-      }
-    }
-
-    vfi->append(t);
-  }
-  
-  return vfi;
-}
-
 PlotLine * QSMath::getPC (PlotLine *in, int period)
 {
   PlotLine *pc = new PlotLine();
@@ -1079,6 +1022,63 @@ PlotLine * QSMath::getSTOCH (MAType maType, int period, int kperiod)
   }
   else
     return k;
+}
+
+PlotLine * QSMath::getVFI (int period)
+{
+  PlotLine *vfi = new PlotLine();
+  if (! data)
+    return vfi;
+
+  int loop;
+  for (loop = period; loop < (int) data->count(); loop++)
+  {
+    double inter = 0.0;
+    double sma_vol = 0.0;
+    int i;
+    double close = data->getClose(loop-period);
+    double high = data->getHigh(loop-period);
+    double low = data->getLow(loop-period);
+    double typical = (high+low+close)/3.0;
+    for(i=loop-period+1; i<=loop; i++) {
+      double ytypical = typical;
+      close = data->getClose(i);
+      high = data->getHigh(i);
+      low = data->getLow(i);
+      typical = (high+low+close)/3.0;
+      double delta = (log(typical) - log(ytypical));
+      inter += delta*delta;
+      sma_vol += data->getVolume(i);
+      }
+    inter = 0.2*sqrt(inter/(double)period)*typical;
+    sma_vol /= (double)period;
+
+    close = data->getClose(loop-period);
+    high = data->getHigh(loop-period);
+    low = data->getLow(loop-period);
+    typical = (high+low+close)/3.0;
+    double t = 0;
+    for(i=loop-period+1; i<=loop; i++) {
+      double ytypical = typical;
+      double volume = data->getVolume(i);
+      close = data->getClose(i);
+      high = data->getHigh(i);
+      low = data->getLow(i);
+      typical = (high+low+close)/3.0;
+
+      if (typical > ytypical+inter)
+        t = t + log(1.0 + volume/sma_vol);
+      else
+      {
+        if (typical < ytypical-inter)
+          t = t - log(1.0 + volume/sma_vol);
+      }
+    }
+
+    vfi->append(t);
+  }
+  
+  return vfi;
 }
 
 PlotLine * QSMath::getVOLR (int period)
